--- a/index.html
+++ b/index.html
@@ -747,6 +747,26 @@
             </div>
         </div>
     </section>
+
+                <!-- ИГРА 3 -->
+            <div class="game-card fade-in delay-2">
+                <img src="https://raw.githubusercontent.com/Dyndovsk/DSg-shop/main/icon.png" alt="NegaHist" class="game-image">
+                <div class="game-info">
+                    <h3 class="game-title">NegaHist</h3>
+                    <p class="game-description">Перепеши мировую историю. Буквально. (Скачивание с сайта пока не доступно. Попробуйте через Телеграм)</p>
+                    <div class="game-tags">
+                        <span class="game-tag">Tkinter</span>
+                        <span class="game-tag">Python</span>
+                        <span class="game-tag">Стратегия</span>
+                    </div>
+                    <div class="game-actions">
+                        <a href="https://github.com/Dyndovsk/DSg-shop/releases/tag/DSg/Minesweeper" class="download-btn">Скачать</a>
+                        <a href="https://github.com/Dyndovsk/DSg-shop/" class="github-btn"><i class="fab fa-github"></i> Код</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <!-- КОНТАКТЫ -->
     <section class="contact" id="contact">
@@ -785,6 +805,16 @@
                         <div class="contact-text">
                             <h4>Игры на GitHub</h4>
                             <a href="https://github.com/Dyndovsk/DSg-shop" target="_blank">DSg-shop репозиторий</a>
+                        </div>
+                    </div>
+
+                    <div class="contact-item">
+                        <div class="contact-icon">
+                            <i class="fas fa-gamepad"></i>
+                        </div>
+                        <div class="contact-text">
+                            <h4>Телеграм Канал</h4>
+                            <a href="https://t.me/DSg_new_and_shop" target="_blank">DSg</a>
                         </div>
                     </div>
                 </div>
